WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238337
[WebGPU] Fix the watchOS build
https://bugs.webkit.org/show_bug.cgi?id=238337
Summary
[WebGPU] Fix the watchOS build
Myles C. Maxfield
Reported
2022-03-24 11:07:04 PDT
[WebGPU] Fix the watchOS build
Attachments
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2022-03-24 11:08:18 PDT
Committed
r291805
(
248832@trunk
): <
https://commits.webkit.org/248832@trunk
>
Radar WebKit Bug Importer
Comment 2
2022-03-24 11:09:16 PDT
<
rdar://problem/90779539
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug