[WebGPU] Fix the watchOS build https://bugs.webkit.org/show_bug.cgi?id=238337

Unreviewed.

* WebGPU/Texture.mm:
(WebGPU::Device::createTexture):


Canonical link: https://commits.webkit.org/248832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291805 268f45cc-cd09-0410-ab3c-d52691b4dbfc